@acme -> @repo and create surfaces package

--- a/packages/feature-home/package.json
+++ b/packages/feature-home/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "@acme/feature-home",
+  "name": "@repo/feature-home",
   "version": "1.0.0",
-  "description": "Acme home feature for React (Native)",
+  "description": "repo home feature for React (Native)",
   "author": "Cedric van Putten <me@bycedric.com>",
   "license": "MIT",
   "main": "./build/index.js",
@@ -19,10 +19,10 @@
     "build": "tsup --clean"
   },
   "dependencies": {
-    "@acme/ui": "workspace:*"
+    "@repo/ui": "workspace:*"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "@testing-library/react-native": "^12.5.0",
     "@tsconfig/recommended": "^1.0.6",
     "@types/jest": "^29.5.12",
@@ -50,7 +50,7 @@
     }
   },
   "eslintConfig": {
-    "extends": "@acme/eslint-config",
+    "extends": "@repo/eslint-config",
     "ignorePatterns": [
       "node_modules",
       "build"
