--- a/packages/surfaces/package.json
+++ b/packages/surfaces/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "@repo/ui",
+  "name": "@repo/surfaces",
   "version": "1.0.0",
-  "description": "repo UI components for React Native",
+  "description": "repo home feature for React (Native)",
   "author": "Cedric van Putten <me@bycedric.com>",
   "license": "MIT",
   "main": "./build/index.js",
@@ -17,6 +17,9 @@
     "lint": "eslint --ext js,ts,tsx .",
     "test": "jest",
     "build": "tsup --clean"
+  },
+  "dependencies": {
+    "@repo/ui": "workspace:*"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
