--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/app-web",
+  "name": "@repo/app-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@acme/feature-home": "workspace:*",
+    "@repo/feature-home": "workspace:*",
     "next": "^13.2.1",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "babel-plugin-react-native-web": "^0.19.6",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.2.1"
   },
   "eslintConfig": {
     "extends": [
-      "@acme/eslint-config"
+      "@repo/eslint-config"
     ],
     "ignorePatterns": [
       "node_modules",
