--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "@acme/eslint-config",
+  "name": "@repo/eslint-config",
   "version": "1.0.0",
-  "description": "Acme eslint configuration for React Native",
+  "description": "repo eslint configuration for React Native",
   "author": "Cedric van Putten <me@bycedric.com>",
   "license": "MIT",
   "main": "index.js",
