Expo works, next 15 broken

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,23 +14,23 @@
     "eas-build-post-install": "pnpm run -w build:mobile"
   },
   "dependencies": {
-    "@repo/feature-home": "workspace:*",
-    "@expo/metro-runtime": "^3.2.1",
-    "expo": "^51.0.17",
-    "expo-dev-client": "~4.0.19",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.18",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "@expo/metro-runtime": "^4.0.0",
+    "@repo/surfaces": "workspace:*",
+    "expo": "^52.0.11",
+    "expo-dev-client": "~5.0.4",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.9",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-web": "~0.19.11"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
     "@babel/core": "^7.24.5",
-    "@types/react": "~18.2.79",
-    "@types/react-dom": "~18.2.25",
-    "babel-preset-expo": "~11.0.11"
+    "@repo/eslint-config": "workspace:*",
+    "@types/react": "~18.3.12",
+    "@types/react-dom": "~18.3.1",
+    "babel-preset-expo": "~12.0.2"
   },
   "eslintConfig": {
     "extends": "@repo/eslint-config",
