--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "@repo/app-web",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "lint": "next lint",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@repo/feature-home": "workspace:*",
+    "@repo/surfaces": "workspace:*",
     "next": "^15.0.3",
-    "react": "~18.3.1",
-    "react-dom": "~18.3.1",
-    "react-native-web": "~0.19.6"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "babel-plugin-react-native-web": "^0.19.6",
-    "eslint": "^8.34.0",
-    "eslint-config-next": "^15.0.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@repo/eslint-config"
-    ],
-    "ignorePatterns": [
-      "node_modules",
-      ".next",
-      "public"
-    ]
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
