--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@repo/surfaces": "workspace:*",
+    "@repo/ui": "workspace:*",
     "next": "^15.0.3",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native-web": "^0.19.13"
   },
