--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@repo/app-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "dev": "expo start",
     "lint": "eslint --ext js,ts,tsx .",
@@ -17,12 +17,17 @@
     "@expo/metro-runtime": "^4.0.0",
     "@repo/surfaces": "workspace:*",
     "expo": "^52.0.11",
+    "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.26.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.11"
   },
   "devDependencies": {
