--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "expo start",
+    "dev": "expo start -c",
     "lint": "eslint --ext js,ts,tsx .",
     "build": "expo export --output-dir ./build --platform all",
     "start": "expo start",
