--- a/packages/surfaces/package.json
+++ b/packages/surfaces/package.json
@@ -19,7 +19,8 @@
     "build": "tsup --clean"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*"
+    "@repo/ui": "workspace:*",
+    "next": "^15.0.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -58,18 +59,5 @@
   },
   "jest": {
     "preset": "jest-expo"
-  },
-  "tsup": {
-    "entry": [
-      "src/index.ts"
-    ],
-    "outDir": "build",
-    "sourcemap": true,
-    "dts": true,
-    "external": [
-      "react",
-      "react-native",
-      "react-native-web"
-    ]
   }
 }
