--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "name": "@repo/ui",
   "version": "1.0.0",
   "description": "repo UI components for React Native",
-  "author": "Cedric van Putten <me@bycedric.com>",
+  "author": "Adam Woo",
   "license": "MIT",
   "main": "./build/index.js",
   "types": "./src/index.ts",
